<resources>
    <string name="app_name">ELEMENTS</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- About tab -->
    <string name="about_developers_label">Main developers</string>
    <string name="about_translator_label">Translator</string>
    <string name="changelog">Changelog</string>
    <string name="translator"></string>

    <!-- Navigation -->

    <string name="start">Start</string>


    <string name="details">Details</string>
    <string name="version_app">1.0.0</string>

    <string name="layout">Layout</string>

    <string name="nav_table">3D Interactive</string>

    <string name="aboutme">Novice Android Developer</string>
    <string name="periodic_table">Periodic Table</string>
    <string name="nav_quizzz">Quiz</string>

    <string name="nav_quiz">Element Experiment</string>
    <string name="nav_equation_balancer">Equation Balancer</string>
    <string name="nav_fun_game">Fun Game</string>
    <string name="nav_about">About Us</string>
    <string name="fun_game">Fun Game</string>
    <string name="quiz">Quiz</string>
    <string name="testtest">Will be develop soon in future</string>
    <string name="future_work_fun_game">Will be developed soon, stay tune</string>
    <string name="future_work">Future Work</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="quizzes">quizzes</string>

    <string name="quizz">Quizzes</string>
    <string name="quizzzzzz">Quizz</string>


    <string name="question1">1. The reactivity of group 1 elements increases down the group. This is because...</string>
    <string name="question1_choice1">it becomes easier to lose an electron</string>
    <string name="question1_choice2">it becomes harder to lose an electron</string>
    <string name="question1_choice3">it becomes easier to gain an electron</string>

    <string name="question2">2.What colour flame is seen when potassium reacts with water?</string>

    <string name="question3">3. Choose the correct order from the top to bottom of group 1.</string>
    <string name="question3_choice1">Li, Na, K, Rb, Cs, Fr</string>
    <string name="question3_choice2">Li, K, Na, Cs, Fr, Rb</string>
    <string name="question3_choice3">Fr, Cs, Rb, K, Na, Li</string>
    <string name="question3_choice4">Li, Na, Fr, K, Cs, Rb</string>

    <string name="question4">4. Group 1 elements are also known as...</string>

    <string name="question5">5 What type of bonds do group 7 elements form?</string>
    <string name="question5_choice1">Ionic and covalent</string>
    <string name="question5_choice2">Covalent only</string>
    <string name="question5_choice3">Metallic and covalent</string>

    <string name="question6">6. How many electrons are in the outer shell of the group 7 elements?</string>

    <string name="question7">7. Bromine displaces iodine from solution because...</string>
    <string name="question7_choice1">Iodine is more reactive than bromine</string>
    <string name="question7_choice2">Bromine is a smaller atom</string>
    <string name="question7_choice3">Bromine is more reactive than iodine</string>
    <string name="question7_choice4">Iodine has more electrons than bromine</string>

    <string name="question8">8. Group 7 elements are also known as...</string>

    <string name="question9">9. Reactivity of the elements in group 7 decreases down the group. This is because…</string>
    <string name="question9_choice1">There are more electrons in the outer shel</string>
    <string name="question9_choice2">The electrons are closer to the nucleus</string>
    <string name="question9_choice3">The electrons in the outer shell are further away from the nucleus</string>
    <string name="question9_choice4">d)There are more electrons in the atom</string>


    <string name="question10">10. Group 1 metals react with non-metals forming what type of bond?</string>

    <string name="submit_answers">Submit Answers</string>
    <string name="fun_games">Fun Games</string>

    <string name="titleAbout">About Elements</string>
    <string name="titleElementDetails" formatted="true">Element details for %s</string>
    <string name="titlePeriodicTable">Periodic Table of the Elements</string>
    <string name="titleElementList">List of elements</string>
    <string name="titleSettings">Elements settings</string>
    <string name="titleSort">Sort by</string>

    <string name="buttonVideo">Watch video</string>
    <string name="buttonWiki">Wikipedia</string>
    <string name="buttonSort">Sort</string>
    <string name="buttonZoom">Zoom</string>

    <string name="menuAbout">About</string>
    <string name="menuSettings">Settings</string>
    <string name="menuList">List view</string>
    <string name="menuTable">Table view</string>

    <string name="prefKeyDarkTheme" translatable="false">theme</string>
    <string name="prefTitleDarkTheme">Dark theme</string>
    <string name="prefKeyTemp" translatable="false">tempUnit</string>
    <string name="prefTitleTemp">Temperature units</string>
    <string name="prefSummaryTemp">Units used to display temperature values</string>
    <string name="prefKeyColors" translatable="false">elementColors</string>
    <string name="prefTitleColors">Element colors</string>
    <string name="prefSummaryColors">Property used to color the elements</string>
    <string name="prefKeySubtextValue" translatable="false">subtextValue</string>
    <string name="prefTitleSubtextValue">Block value</string>
    <string name="prefSummarySubtextValue">The value to display under the element symbol</string>
    <string name="prefKeyShowControls" translatable="false">showControls</string>
    <string name="prefTitleShowControls">Periodic Table controls</string>
    <string name="prefSummaryShowControls">Show the controls for the Periodic Table in the table view</string>

    <string name="labelNumber">Atomic number</string>
    <string name="labelSymbol">Symbol</string>
    <string name="labelName">Name</string>
    <string name="labelWeight">Atomic weight</string>
    <string name="labelCategory">Category</string>
    <string name="labelGPB">Group, period, block</string>
    <string name="labelConfiguration">Electron configuration</string>
    <string name="labelElectrons">Electrons per shell</string>
    <string name="labelDensity">Density</string>
    <string name="labelMelt">Melting point</string>
    <string name="labelBoil">Boiling point</string>
    <string name="labelHeat">Specific heat</string>
    <string name="labelNegativity">Electronegativity</string>
    <string name="labelAbundance">Abundance</string>
    <string name="labelIsotopes">Common isotopes</string>

    <string name="labelSubtextValue">Display</string>
    <string name="labelBlockColors">Color by</string>

    <string name="hintFilter">Filter by name or symbol</string>



    <string name="descTableBlock" formatted="true" translatable="false">%1$d, %2$s, %3$s, %4$s %5$s, %6$s %7$s</string>
    <string name="descGroup">group</string>
    <string name="descPeriod">period</string>
    <string name="descBlock">block</string>

    <string name="unknown">unknown</string>
    <string name="periodic_tablee">Lessons</string>
    <string name="equation">Equation</string>
    <string name="_3d_interactive">3D Interactive</string>
    <string name="equation_balancerr">Equation Balancer</string>
    <string name="question2_choice3">Liliac</string>
</resources>
