<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--<group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_1"
            android:icon="@drawable/ic_interaction"
            android:title="@string/_3d_interactive" />
        <item
            android:id="@+id/nav_2"
            android:icon="@drawable/ic_experiment"
            android:title="Element Experimenter" />
        <item
            android:id="@+id/nav_3"
            android:icon="@drawable/ic_cube_outline_black_48dp"
            android:title="@string/fun_game" />


    </group>
    -->

    <item android:title="Fun with Periodic Table">
        <menu>
            <group android:checkableBehavior="none">
                <item
                    android:checkable="true"
                    android:id="@+id/nav_7"
                    android:icon="@drawable/ic_balancer"
                    android:title="@string/equation_balancerr" />

                <item
                    android:checkable="true"
                    android:id="@+id/nav_4"
                    android:icon="@drawable/ic_elements"
                    android:title="@string/periodic_tablee" />
                <item
                    android:checkable="true"
                    android:id="@+id/nav_5"
                    android:icon="@drawable/ic_format_line_style_black_48dp"
                    android:title="@string/quiz" />
                <item
                    android:checkable="true"
                    android:id="@+id/nav_6"
                    android:icon="@drawable/ic_person"
                    android:title="About Us" />
            </group>
        </menu>
    </item>

</menu>
