<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:ignore="InconsistentLayout,UnusedAttribute">

    <ImageButton
        android:id="@+id/zoomButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="#00000000"
        android:contentDescription="@string/buttonZoom"
        android:src="@android:drawable/ic_menu_zoom" />

    <android.support.v4.widget.Space
        android:layout_width="10dp"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/subtextValue"
        android:text="@string/labelSubtextValue" />

    <Spinner
        android:id="@+id/subtextValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:prompt="@string/labelSubtextValue"
        android:spinnerMode="dialog" />

    <android.support.v4.widget.Space
        android:layout_width="20dp"
        android:layout_height="match_parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/blockColors"
        android:text="@string/labelBlockColors" />

    <Spinner
        android:id="@+id/blockColors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/elementColorNames"
        android:prompt="@string/labelBlockColors"
        android:spinnerMode="dialog" />
</LinearLayout>
